changed file names

--- a/QHE_Agilent_U2542A/QHE_Agilent_U2542A.ini
+++ b/QHE_Agilent_U2542A/QHE_Agilent_U2542A.ini
@@ -3,14 +3,14 @@
 [General settings]
 
 # The name is shown in all the configuration windows
-name: Agilent U2500A
+name: QHE_Agilent_U2542A
 
 # The version string should be updated whenever changes are made to this config file
 version: 0.1
 
 # Name of folder containing the code defining a custom driver. Do not define this item
 # or leave it blank for any standard driver based on the built-in VISA interface.
-driver_path: Agilent_U2542A
+driver_path: QHE_Agilent_U2542A
 
 #Pre-defined communication interface for instrument, default is GPIB.
 #Valid values are GPIB, TCPIP, USB, PXI, Serial, VISA, Other, None.
