--- a/SQE_Keysight_34401A/SQE_Keysight_34401A.ini
+++ b/SQE_Keysight_34401A/SQE_Keysight_34401A.ini
@@ -3,7 +3,7 @@
 [General settings]
 
 # The name is shown in all the configuration windows
-name: Agilent 34401 Multimeter
+name: SQE_Keysight_34401A
 
 # The version string should be updated whenever changes are made to this config file
 version: 1.3
