--- a/SQE_Keysight_34420A/SQE_Keysight_34420A.ini
+++ b/SQE_Keysight_34420A/SQE_Keysight_34420A.ini
@@ -3,15 +3,14 @@
 [General settings]
 
 # The name is shown in all the configuration windows
-name: Agilent 34420 Multimeter
+name: SQE_Keysight_34420A
 
 # The version string should be updated whenever changes are made to this config file
 version: 1.3
 
 # Name of folder containing the code defining a custom driver. Do not define this item
 # or leave it blank for any standard driver based on the built-in VISA interface.
-driver_path: Keysight_34420A
-
+driver_path: SQE_Keysight_34420A
 
 [Model and options]
 # The option section allow instruments with different options to use the same driver
@@ -21,7 +20,6 @@ check_model: False
 
 # List of models supported by this driver
 model_str_1: 34420A
-
 
 # General VISA settings for the instrument.
 [VISA settings]
