--- a/SQE_RedPitaya_STEMlab125-14/SQE_RedPitaya_STEMlab125-14.ini
+++ b/SQE_RedPitaya_STEMlab125-14/SQE_RedPitaya_STEMlab125-14.ini
@@ -3,14 +3,14 @@
 [General settings]
 
 # The name is shown in all the configuration windows
-name: RedPitaya_STEMlab125-14
+name: SQE_RedPitaya_STEMlab125-14
 
 # The version string should be updated whenever changes are made to this config file
 version: 1.0
 
 # Name of folder containing the code defining a custom driver. Do not define this item
 # or leave it blank for any standard driver based on the built-in VISA interface.
-driver_path: RedPitaya_STEMlab125-14
+driver_path: SQE_RedPitaya_STEMlab125-14
 
 #Set to True if driver is a Signal Generator. Default is False.
 #signal_generator: True
