--- a/SQE_LeidenCryostat/SQE_LeidenCryostat.ini
+++ b/SQE_LeidenCryostat/SQE_LeidenCryostat.ini
@@ -3,25 +3,23 @@
 [General settings]
 
 # The name is shown in all the configuration windows
-name: Two Tone Signal Generator
+name: SQE_LeidenCryostat
 
 # The version string should be updated whenever changes are made to this config file
 version: 1.0
 
 # Name of folder containing the code defining a custom driver. Do not define this item
 # or leave it blank for any standard driver based on the built-in VISA interface.
-driver_path: TwoToneSignalGenerator
+driver_path: SQE_LeidenCryostat
 
-# Define that the driver is a Signal Generator
-signal_generator: True
+interface: None
 
-# Define quantities in sections. This list is a selection of allowed keywords,
-# see the manual for a full list of options
-#   datatype:      The datatype should be one of DOUBLE, BOOLEAN, COMBO,
-#                  STRING, COMPLEX, VECTOR, VECTOR_COMPLEX, PATH or BUTTON.
+# Define quantities in sections. The section name should be the same as the "name" value
+# The following keywords are allowed:
+#   name:          Quantity name
 #   unit:          Quantity unit
-#   set_cmd:       Command used to send data to the instrument. Put <*> where the value should appear.
-#   get_cmd:       Command used to get the data from the instrument. Default is set_cmd?
+#   enabled:	   Determines wether the control is enabled from start.  Default is True	
+#   datatype:      The data type should be one of DOUBLE, BOOLEAN, COMBO or STRING
 #   def_value:     Default value
 #   low_lim:       Lowest allowable value.  Defaults to -INF
 #   high_lim:      Highest allowable values.  Defaults to +INF
@@ -29,75 +27,69 @@ signal_generator: True
 #   combo_def_2:   Second option in a pull-down combo box. Only used when datatype=COMBO
 #   ...
 #   combo_def_n:   nth option in a pull-down combo box. Only used when datatype=COMBO
+#   group:         Name of the group where the control belongs.
 #   state_quant:   Quantity that determines this control's visibility
 #   state_value_1: Value of "state_quant" for which the control is visible
 #   state_value_2: Value of "state_quant" for which the control is visible
 #   ...
 #   state_value_n: Value of "state_quant" for which the control is visible
 #   permission:    Sets read/writability, options are BOTH, READ, WRITE or NONE. Default is BOTH 
-#   group:         Name of the group where the control belongs.
-#   section:       Name of the section where the control belongs.
+#   set_cmd:       Command used to send data to the instrument. Put <*> where the value should appear.
+#   get_cmd:       Command used to get the data from the instrument. Default is set_cmd?
+#   sweep_cmd:     Command used to sweep data. Use <sr> for sweep rate, <st> for sweep time, and <*> for the value.
+#   stop_cmd:      Command used to stop a sweep
 
 
+[Data file]
+datatype: PATH
+permission: WRITE
+group: Data
 
-[Frequency 1]
+[P4]
 datatype: DOUBLE
-unit: Hz
-def_value: 10.0
-tooltip: Frequency of Tone 1
-
-[Frequency 2]
-datatype: DOUBLE
-unit: Hz
-def_value: 20.0
-tooltip: Frequency of Tone 2
-
-[Amplitude 1]
-datatype: DOUBLE
-unit: V
-def_value: 1.0
-tooltip: Amplitude of Tone 1
-
-[Amplitude 2]
-datatype: DOUBLE
-unit: V
-def_value: 1.0
-tooltip: Amplitude of Tone 2
-
-[Phase 1]
-datatype: DOUBLE
-unit: deg
-def_value: 0.0
-tooltip: Phase of Tone 1
-
-[Phase 2]
-datatype: DOUBLE
-unit: deg
-def_value: 0.0
-tooltip: Phase of Tone 2
-
-[Duration]
-datatype: DOUBLE
-unit: s
-def_value: 1.0
-
-[Number of points]
-datatype: DOUBLE
-def_value: 1000
-
-[Add noise]
-datatype: BOOLEAN
-def_value: False
-
-[Noise amplitude]
-datatype: DOUBLE
-unit: V
-def_value: 0.1
-state_quant: Add noise
-state_value_1: True
-
-[Signal]
-datatype: VECTOR
+unit: bar
 permission: READ
-x_name: Time
-x_unit: s
+group: GHS Pressure
+
+[P5]
+datatype: DOUBLE
+unit: bar
+permission: READ
+group: GHS Pressure
+
+[Dump, 3He]
+datatype: DOUBLE
+unit: bar
+permission: READ
+group: GHS Pressure
+
+[Dump, 4He]
+datatype: DOUBLE
+unit: bar
+permission: READ
+group: GHS Pressure
+
+[Still pressure]
+datatype: DOUBLE
+unit: bar
+permission: READ
+group: Maxi Gauge
+
+[IVC pressure]
+datatype: DOUBLE
+unit: bar
+permission: READ
+group: Maxi Gauge
+
+[OVC pressure]
+datatype: DOUBLE
+unit: bar
+permission: READ
+group: Maxi Gauge
+
+[Flow]
+datatype: DOUBLE
+unit: mol/s
+permission: READ
+group: GHS Pressure
+
