--- a/SQE_VIRTUAL_UserFunctions/SQE_VIRTUAL_UserFunctions.ini
+++ b/SQE_VIRTUAL_UserFunctions/SQE_VIRTUAL_UserFunctions.ini
@@ -3,14 +3,14 @@
 [General settings]
 
 # The name is shown in all the configuration windows
-name: SQE_UserFunctions
+name: SQE_VIRTUAL_UserFunctions
 
 # The version string should be updated whenever changes are made to this config file
 version: 1.0
 
 # Name of folder containing the code defining a custom driver. Do not define this item
 # or leave it blank for any standard driver based on the built-in VISA interface.
-driver_path: SQE_UserFunctions
+driver_path: SQE_VIRTUAL_UserFunctions
 
 # Flags for defining signal generator or signal analyzer functionality
 signal_generator: True
