--- a/SQE_RohdeSchwarz_NetworkAnalyzer/SQE_RohdeSchwarz_NetworkAnalyzer.ini
+++ b/SQE_RohdeSchwarz_NetworkAnalyzer/SQE_RohdeSchwarz_NetworkAnalyzer.ini
@@ -3,17 +3,19 @@
 [General settings]
 
 # The name is shown in all the configuration windows
-name: TEMP_SQE_Rohde&Schwarz Network Analyzer
+name: SQE_Rohde&Schwarz Network Analyzer
 
 # The version string should be updated whenever changes are made to this config file
 version: 1.0
 
 # Name of folder containing the code defining a custom driver. Do not define this item
 # or leave it blank for any standard driver based on the built-in VISA interface.
-driver_path: TEMP_SQE_RohdeSchwarz_NetworkAnalyzer
+driver_path: SQE_RohdeSchwarz_NetworkAnalyzer
 
 # default interface and address
-interface: TCPIP
+interface: VISA
+
+address: USB0::0x0AAD::0x01A1::102254::INSTR
 
 
 [Model and options]
