minor fixes on VNA+RTSwitchBox

--- a/SQE_RohdeSchwarz_NetworkAnalyzer_with_RTSwitchBox/SQE_RohdeSchwarz_NetworkAnalyzer_with_RTSwitchBox.ini
+++ b/SQE_RohdeSchwarz_NetworkAnalyzer_with_RTSwitchBox/SQE_RohdeSchwarz_NetworkAnalyzer_with_RTSwitchBox.ini
@@ -13,8 +13,8 @@ version: 1.0
 driver_path: SQE_RohdeSchwarz_NetworkAnalyzer_with_RTSwitchBox
 
 # default interface and address
-interface: TCPIP
-address: 169.254.81.166
+interface: VISA
+address: USB0::0x0AAD::0x01A1::102254::INSTR
 
 
 [Model and options]
