further updated SQE_QSwitchBox

--- a/SQE_QSwitchBox/SQE_QSwitchBox.ini
+++ b/SQE_QSwitchBox/SQE_QSwitchBox.ini
@@ -3,14 +3,14 @@
 [General settings]
 
 # The name is shown in all the configuration windows
-name: INRiM_QSwitchBox
+name: SQE_QSwitchBox
 
 # The version string should be updated whenever changes are made to this config file
 version: 1.0 										
 
 # Name of folder containing the code defining a custom driver. Do not define this item
 # or leave it blank for any standard driver based on the built-in VISA interface.
-# driver_path: INRiM_QSwitchBox
+# driver_path: SQE_QSwitchBox
 
 #Pre-defined communication interface for instrument, default is GPIB.
 #Valid values are GPIB, TCPIP, USB, PXI, Serial, VISA, Other, None.
@@ -95,14 +95,8 @@ get_cmd: SW2?
 state_quant: Mode
 state_value_1: Separate
 
-[PulseWidth]
+[Pulse width]
 datatype: DOUBLE
 def_value:20
 unit: ms
-permission: BOTH
-
-[Risp]
-datatype: STRING
-def_value:
-unit:
 permission: BOTH
