first commit in months

--- a/SQE_Agilent_SpectrumAnalyzer/SQE_Agilent_SpectrumAnalyzer.ini
+++ b/SQE_Agilent_SpectrumAnalyzer/SQE_Agilent_SpectrumAnalyzer.ini
@@ -3,14 +3,14 @@
 [General settings]
 
 # The name is shown in all the configuration windows
-name: SQE_Agilent_Spectrum_Analyzer_E4440A
+name: SQE_Agilent Spectrum Analyzer
 
 # The version string should be updated whenever changes are made to this config file
 version: 1.1
 
 # Name of folder containing the code defining a custom driver. Do not define this item
 # or leave it blank for any standard driver based on the built-in VISA interface.
-driver_path: SQE_Agilent_Spectrum_Analyzer_E4440A
+driver_path: SQE_Agilent_SpectrumAnalyzer
 
 # General VISA settings for the instrument.
 [VISA settings]
@@ -23,7 +23,7 @@ use_visa = True
 reset: True
 
 # Time (in seconds) before the timing out while waiting for an instrument response. Default is 5
-timeout: 10
+timeout: 20
 
 # Query instrument errors (True or False).  If True, every command sent to the device will
 # be followed by an error query.  This is useful when testing new setups, but may degrade
@@ -61,8 +61,9 @@ final:
 # The option section allow instruments with different options to use the same driver
 
 # List of models supported by this driver
-model_str_1: E44xx
+model_str_1: HP E44xx
 model_str_2: N90xx
+model_str_3: Agilent E44xx
 
 # Check instrument model id at startup (True or False). Default is False
 check_model: True
@@ -70,9 +71,10 @@ check_model: True
 # If check_model is set to True, define command for getting the model (default is *IDN?)
 #model_cmd: *IDN?
 
-# Valid model strings returned by the instrument. Default value = model_str #INVERTITI HP e AGILENT (28/12/2022 - Lele)
-model_id_1: Agilent Technologies, E44
-model_id_2: Hewlett-Packard,N90
+# Valid model strings returned by the instrument. Default value = model_str
+model_id_1: Hewlett-Packard, E44
+model_id_2: Agilent Technologies,N90
+model_id_3: Agilent Technologies, E44
 
 
 # Define quantities in sections. This list is a selection of allowed keywords,
@@ -98,35 +100,6 @@ model_id_2: Hewlett-Packard,N90
 #   group:         Name of the group where the control belongs.
 #   section:       Name of the section where the control belongs.
 
-[Auto Align]
-datatype: COMBO
-def_value: On
-combo_def_1: On
-combo_def_2: Off
-cmd_def_1: ON
-cmd_def_2: OFF
-set_cmd: :CAL:AUTO
-get_cmd: :CAL:AUTO?
-group: General Config
-
-[Freq Ref Source]
-datatype: COMBO
-def_value: Int
-combo_def_1: Int
-combo_def_2: Ext
-cmd_def_1: INT
-cmd_def_2: EXT
-set_cmd: :ROSC:SOUR
-get_cmd: :ROSC:SOUR?
-group: General Config
-
-[Freq Ref Value]
-datatype: DOUBLE
-#permission: WRITE
-def_value: 10
-unit: MHz
-set_cmd: :ROSC:EXT:FREQ <*> MHz
-group: General Config
 
 [Range type]
 datatype: COMBO
@@ -194,6 +167,8 @@ state_quant: Range type
 state_value_1: Center - Span
 state_value_2: Start - Stop
 group: Horizontal
+model_value_1: HP E44xx
+model_value_2: N90xx
 
 [IF bandwidth]
 datatype: DOUBLE
@@ -221,6 +196,31 @@ datatype: BOOLEAN
 def_value: False
 group: Acquisition
 
+[Scale type]
+datatype: COMBO
+tooltip: Log gives data in dBm, Linear in volts
+def_value: Log
+combo_def_1: Log
+combo_def_2: Linear
+set_cmd: DISP:WIND:TRAC:Y:SPAC
+cmd_def_1: LOG
+cmd_def_2: LIN
+group: Acquisition
+
+[Signal]
+x_name: Frequency
+x_unit: Hz
+datatype: VECTOR
+permission: READ
+group: Acquisition
+
+[Signal - Zero span]
+datatype: DOUBLE
+permission: READ
+state_quant: Range type
+state_value_1: Zero-span mode
+group: Acquisition
+
 [Output enabled]
 datatype: BOOLEAN
 def_value: False
@@ -235,24 +235,6 @@ unit: dBm
 set_cmd: :SOUR:POW
 model_value_1: E44xx
 group: Output
-
-[Signal]
-x_name: Frequency
-x_unit: Hz
-datatype: VECTOR
-permission: READ
-
-[Signal - Zero span]
-datatype: DOUBLE
-permission: READ
-state_quant: Range type
-state_value_1: Zero-span mode
-
-[Average - Value]
-datatype: DOUBLE
-def_value: 0
-permission: READ
-group: Analysis SQE
 
 
 
