--- a/SQE_QSwitchBox_future_upgrade/SQE_QSwitchBox_future_upgrade.ini
+++ b/SQE_QSwitchBox_future_upgrade/SQE_QSwitchBox_future_upgrade.ini
@@ -3,24 +3,24 @@
 [General settings]
 
 # The name is shown in all the configuration windows
-name: SQE_QSwitchBox
+name: INRiM_QSwitchBox
 
 # The version string should be updated whenever changes are made to this config file
-version: 1.0
+version: 1.0 										
 
 # Name of folder containing the code defining a custom driver. Do not define this item
 # or leave it blank for any standard driver based on the built-in VISA interface.
+# driver_path: INRiM_QSwitchBox
 
-# default interface and address
+#Pre-defined communication interface for instrument, default is GPIB.
+#Valid values are GPIB, TCPIP, USB, PXI, Serial, VISA, Other, None.
 interface: Serial
-address: ASRL4::INSTR
 
+#Set to True if driver is a Signal Generator. Default is False.
 
-[Model and options]
-# The option section allow instruments with different options to use the same driver
+#Set to True if driver is a Signal Analyzer. Default is False.
 
-# Check instrument model id at startup (True or False). Default is False
-check_model: False
+#Set to True if driver is a Controller. Default is False.
 
 # General VISA settings for the instrument.
 [VISA settings]
@@ -29,46 +29,13 @@ check_model: False
 # If False, the driver will not perform any operations (unless there is a custom driver).
 use_visa = True
 
-term_char: CR+LF
-baud_rate: 115200
-str_value_out: %.0f
-send_end_on_write: False
-stop_bits: 2
-data_bits: 8
-reset: True # Reset the interface (not the instrument) at startup (True or False).  Default is False
-timeout: 5 # Time (in seconds) before the timing out while waiting for an instrument response. Default is 5
 
 
-# Query instrument errors (True or False).  If True, every command sent to the device will
-# be followed by an error query.  This is useful when testing new setups, but may degrade
-# performance by slowing down the instrument communication. 
-query_instr_errors: False 
 
-# Bit mask for checking status byte errors (default is 255, include all errors)
-# The bits signal the following errors:
-# 0: Operation
-# 1: Request control
-# 2: Query error
-# 3: Device error
-# 4: Execution error
-# 5: Command error
-# 6: User request
-# 7: Power on
-error_bit_mask: 255
+[Model and options]
+# The option section allow instruments with different options to use the same driver
 
-# SCPI string to be used when querying for instrument error messages
-#error_cmd: 
 
-# Initialization commands are sent to the instrument when starting the driver
-# *RST will reset the device, *CLS clears the interface
-#init:
-
-# Boolean string values (used for sending True/False to instrument), default is 1 and 0
-#str_true: ON
-#str_false: OFF
-
-# Final commands sent to the instrument when closing the driver
-#final: 
 # Define quantities in sections. This list is a selection of allowed keywords,
 # see the manual for a full list of options
 #   datatype:      The datatype should be one of DOUBLE, BOOLEAN, COMBO,
@@ -92,23 +59,50 @@ error_bit_mask: 255
 #   group:         Name of the group where the control belongs.
 #   section:       Name of the section where the control belongs.
 
+[Mode]
+datatype: COMBO
+combo_def_1: Coordinate
+combo_def_2: Separate
+def_value: Coordinate
 
 [Path]
 datatype: DOUBLE
 high_lim: 6
 low_lim: 0
 def_value: 0
-set_cmd: BOTH <*>
+set_cmd: BOTH<*>
 get_cmd: BOTH?
-tooltip: selecting 0 is equivalent to resetting
+state_quant: Mode
+state_value_1: Coordinate
 
-[Delay]
+[Switch1]
 datatype: DOUBLE
-def_value: 20
-unit: ms
-set_cmd: DEL <*>
-get_cmd: DEL?
+high_lim: 6
+low_lim: 0
+def_value: 0
+set_cmd: SW1<*>
+get_cmd: SW1?
+state_quant: Mode
+state_value_1: Separate
 
-[Reset]
-datatype: BUTTON
-set_cmd: *RST
+[Switch2]
+datatype: DOUBLE
+high_lim: 6
+low_lim: 0
+def_value: 0
+set_cmd: SW2<*>
+get_cmd: SW2?
+state_quant: Mode
+state_value_1: Separate
+
+[PulseWidth]
+datatype: DOUBLE
+def_value:20
+unit: ms
+permission: BOTH
+
+[Risp]
+datatype: STRING
+def_value:
+unit:
+permission: BOTH
