--- a/SQE_VIRTUAL_Cal_Standard_Manager/SQE_VIRTUAL_Cal_Standard_Manager.ini
+++ b/SQE_VIRTUAL_Cal_Standard_Manager/SQE_VIRTUAL_Cal_Standard_Manager.ini
@@ -3,14 +3,14 @@
 [General settings]
 
 # The name is shown in all the configuration windows
-name: SQE_VIRTUAL_CalKit
+name: SQE_VIRTUAL_Cal_Standard_Manager
 
 # The version string should be updated whenever changes are made to this config file
 version: 1.0
 
 # Name of folder containing the code defining a custom driver. Do not define this item
 # or leave it blank for any standard driver based on the built-in VISA interface.
-driver_COMBO: SQE_VIRTUAL_CalKit
+driver_path: SQE_VIRTUAL_Cal_Standard_Manager
 
 
 # Flags for defining signal generator or signal analyzer functionality
@@ -61,9 +61,33 @@ combo_def_2: TRL
 combo_def_3: SOLT
 group: General settings
 
-[Folder to save s2p files in]
+[Database for the SNP files]
 datatype: PATH
 group: General settings
+def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\CryoRF_SPar_Calibration Standards\SOLR_Cal_Kit SMA 1
+tooltip: The global folder where all the standards' acquistions will be stored
+
+[Use today's date as sub-folder name]
+datatype: BOOLEAN
+group: General settings
+def_value: True
+tooltip: The sub-folder for each acquistion will be today's date and time in the format YYYY_MM_DD__HH_MM_SS
+
+[Sub-folder name]
+datatype: STRING
+group: General settings
+def_value: DefaultName
+state_quant: Use today's date as sub-folder name
+state_value_1: False
+
+[Current switch throw]
+datatype: DOUBLE
+high_lim: 6
+low_lim: 0
+def_value: 0
+permission: WRITE
+Group: QSwitchBox state
+show_in_measurement_dlg: True
 
 #############################
 # POSITION OF THE STANDARDS #
@@ -81,6 +105,7 @@ group: Position of standards
 state_quant: Calibration method
 state_value_1: SOLR
 state_value_2: SOLT
+def_value: 5
 
 [Position of open standard]
 datatype: COMBO
@@ -94,6 +119,7 @@ group: Position of standards
 state_quant: Calibration method
 state_value_1: SOLR
 state_value_2: SOLT
+def_value: 1
 
 [Position of load standard]
 datatype: COMBO
@@ -107,8 +133,9 @@ group: Position of standards
 state_quant: Calibration method
 state_value_1: SOLR
 state_value_2: SOLT
+def_value: 6
 
-[Position of reciprocal standards]
+[Position of reciprocal standard]
 datatype: COMBO
 combo_def_1: 1
 combo_def_2: 2
@@ -119,8 +146,9 @@ combo_def_6: 6
 group: Position of standards
 state_quant: Calibration method
 state_value_1: SOLR
+def_value: 2
 
-[Position of thru standards]
+[Position of thru standard]
 datatype: COMBO
 combo_def_1: 1
 combo_def_2: 2
@@ -133,7 +161,7 @@ state_quant: Calibration method
 state_value_1: SOLT
 state_value_2: TRL
 
-[Position of reflect standards]
+[Position of reflect standard]
 datatype: COMBO
 combo_def_1: 1
 combo_def_2: 2
@@ -145,7 +173,7 @@ group: Position of standards
 state_quant: Calibration method
 state_value_1: TRL
 
-[Position of line standards]
+[Position of line standard]
 datatype: COMBO
 combo_def_1: 1
 combo_def_2: 2
@@ -158,8 +186,16 @@ state_quant: Calibration method
 state_value_1: TRL
 
 ###########
-# General settings #
+# Signals #
 ###########
+
+[Frequency range]
+datatype: VECTOR
+x_name: Frequency
+x_unit: Hz
+permission: WRITE
+show_in_measurement_dlg: True
+
 
 [Input S11]
 datatype: VECTOR_COMPLEX
@@ -167,7 +203,7 @@ x_name: Frequency
 x_unit: Hz
 permission: WRITE
 show_in_measurement_dlg: True
-Group: General settings
+
 
 [Input S12]
 datatype: VECTOR_COMPLEX
@@ -175,7 +211,7 @@ x_name: Frequency
 x_unit: Hz
 permission: WRITE
 show_in_measurement_dlg: True
-Group: General settings
+
 
 [Input S21]
 datatype: VECTOR_COMPLEX
@@ -183,7 +219,7 @@ x_name: Frequency
 x_unit: Hz
 permission: WRITE
 show_in_measurement_dlg: True
-Group: General settings
+
 
 [Input S22]
 datatype: VECTOR_COMPLEX
@@ -191,7 +227,24 @@ x_name: Frequency
 x_unit: Hz
 permission: WRITE
 show_in_measurement_dlg: True
-Group: General settings
+
+[Input a2/b2_1]
+label: Input forward switch-term
+datatype: VECTOR_COMPLEX
+x_name: Frequency
+x_unit: Hz
+permission: WRITE
+show_in_measurement_dlg: True
+
+[Input a1/b1_2]
+label: Input reverse
+ switch-term
+datatype: VECTOR_COMPLEX
+x_name: Frequency
+x_unit: Hz
+permission: WRITE
+show_in_measurement_dlg: True
+
 
 [Output S11]
 datatype: VECTOR_COMPLEX
@@ -199,7 +252,7 @@ x_name: Frequency
 x_unit: Hz
 permission: READ
 show_in_measurement_dlg: True
-Group: General settings
+
 
 [Output S12]
 datatype: VECTOR_COMPLEX
@@ -207,7 +260,7 @@ x_name: Frequency
 x_unit: Hz
 permission: READ
 show_in_measurement_dlg: True
-Group: General settings
+
 
 [Output S21]
 datatype: VECTOR_COMPLEX
@@ -215,7 +268,7 @@ x_name: Frequency
 x_unit: Hz
 permission: READ
 show_in_measurement_dlg: True
-Group: General settings
+
 
 [Output S22]
 datatype: VECTOR_COMPLEX
@@ -223,13 +276,18 @@ x_name: Frequency
 x_unit: Hz
 permission: READ
 show_in_measurement_dlg: True
-Group: General settings
 
-[Selected switch]
-datatype: DOUBLE
-high_lim: 6
-low_lim: 0
-def_value: 0
-permission: WRITE
-Group: QSwitchBox state
+[Output a2/b2_1]
+datatype: VECTOR_COMPLEX
+x_name: Frequency
+x_unit: Hz
+permission: READ
 show_in_measurement_dlg: True
+
+[Output a1/b1_2]
+datatype: VECTOR_COMPLEX
+x_name: Frequency
+x_unit: Hz
+permission: READ
+show_in_measurement_dlg: True
+
