--- a/SQE_VIRTUAL_Calibrator/SQE_VIRTUAL_Calibrator.ini
+++ b/SQE_VIRTUAL_Calibrator/SQE_VIRTUAL_Calibrator.ini
@@ -53,75 +53,6 @@ use_visa = False
 #   section:       Name of the section where the control belongs.
 
 
-###########
-# SIGNALS #
-###########
-
-[Raw S11]
-datatype: VECTOR_COMPLEX
-x_name: Frequency
-x_unit: Hz
-permission: WRITE
-show_in_measurement_dlg: True
-Group: Signals
-
-[Raw S12]
-datatype: VECTOR_COMPLEX
-x_name: Frequency
-x_unit: Hz
-permission: WRITE
-show_in_measurement_dlg: True
-Group: Signals
-
-[Raw S21]
-datatype: VECTOR_COMPLEX
-x_name: Frequency
-x_unit: Hz
-permission: WRITE
-show_in_measurement_dlg: True
-Group: Signals
-
-[Raw S22]
-datatype: VECTOR_COMPLEX
-x_name: Frequency
-x_unit: Hz
-permission: WRITE
-show_in_measurement_dlg: True
-Group: Signals
-
-[Corrected S11]
-datatype: VECTOR_COMPLEX
-x_name: Frequency
-x_unit: Hz
-permission: READ
-show_in_measurement_dlg: True
-Group: Signals
-
-[Corrected S12]
-datatype: VECTOR_COMPLEX
-x_name: Frequency
-x_unit: Hz
-permission: READ
-show_in_measurement_dlg: True
-Group: Signals
-
-[Corrected S21]
-datatype: VECTOR_COMPLEX
-x_name: Frequency
-x_unit: Hz
-permission: READ
-show_in_measurement_dlg: True
-Group: Signals
-
-[Corrected S22]
-datatype: VECTOR_COMPLEX
-x_name: Frequency
-x_unit: Hz
-permission: READ
-show_in_measurement_dlg: True
-Group: Signals
-
-
 [Calibration method]
 datatype: COMBO
 def_value: SOLR
@@ -130,133 +61,294 @@ combo_def_2: TRL
 combo_def_3: SOLT
 group: General settings
 
-######################
-# MEASURED STANDARDS #
-######################
-
-[Measured short (.s2p file)]
-datatype: PATH
-group: Measured standards
-def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\2023\Cal_standards\Measured\Short.s2p
-state_quant: Calibration method
-state_value_1: SOLR
-state_value_2: SOLT
-
-
-[Measured open (.s2p file)]
-datatype: PATH
-group: Measured standards
-def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\2023\Cal_standards\Measured\Open.s2p
-state_quant: Calibration method
-state_value_1: SOLR
-state_value_2: SOLT
-
-
-[Measured load (.s2p file)]
-datatype: PATH
-group: Measured standards
-def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\2023\Cal_standards\Measured\Load.s2p
-state_quant: Calibration method
-state_value_1: SOLR
-state_value_2: SOLT
-
-[Measured reciprocal (.s2p file)]
-datatype: PATH
-group: Measured standards
-def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\2023\Cal_standards\Measured\Reciprocal.s2p
-state_quant: Calibration method
-state_value_1: SOLR
-
-[Measured thru (.s2p file)]
-datatype: PATH
-group: Measured standards
-state_quant: Calibration method
-state_value_1: SOLT
-state_value_2: TRL
-
-[Measured reflect (.s2p file)]
-datatype: PATH
-group: Measured standards
-state_quant: Calibration method
-state_value_1: TRL
-
-[Measured line (.s2p file)]
-datatype: PATH
-group: Measured standards
-state_quant: Calibration method
-state_value_1: TRL
-
-##################
-# OPTIONAL STUFF #
-##################
-
-[Load switch-terms]
-datatype: BOOLEAN
-def_value: True
-group: Additional reference
-tooltip: They are required to perform SOLR calibration. If not provided, ideal condidtions will be assumed.
-
-[Measured switch-terms (.s2p file)]
-datatype: PATH
-group: Additional reference
-def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\2023\Cal_standards\Measured\SwitchTerms.s2p
-state_quant: Load switch-terms
-state_value_1: True
-
-[Load isolation]
-datatype: BOOLEAN
-def_value: False
-group: Additional reference
-
-[Measured isolation (.s2p file)]
-datatype: PATH
-group: Additional reference
-state_quant: Load isolation
-state_value_1: True
-
 ##########
 # IDEALS #
 ##########
 
-[Ideal short (.s2p file)]
+[Ideal short]
 datatype: PATH
 group: Ideal standards
 state_quant: Calibration method
 state_value_1: SOLR
 state_value_2: SOLT
-def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\2023\Cal_standards\Ideals\Short.s2p
+def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\CryoRF_SPar_Calibration Standards\Ideals\Short.s2p
+tooltip: Select s2p file
 
-[Ideal open (.s2p file)]
+[Ideal open]
 datatype: PATH
 group: Ideal standards
 state_quant: Calibration method
 state_value_1: SOLR
 state_value_2: SOLT
-def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\2023\Cal_standards\Ideals\Open.s2p
+def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\CryoRF_SPar_Calibration Standards\Ideals\Open.s2p
+tooltip: Select s2p file
 
-[Ideal load (.s2p file)]
+[Ideal load]
 datatype: PATH
 group: Ideal standards
 state_quant: Calibration method
 state_value_1: SOLR
 state_value_2: SOLT
-def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\2023\Cal_standards\Ideals\Load.s2p
+def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\CryoRF_SPar_Calibration Standards\Ideals\Load.s2p
+tooltip: Select s2p file
 
-[Ideal thru (.s2p file)]
+[Ideal reciprocal]
 datatype: PATH
 group: Ideal standards
-def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\2023\Cal_standards\Ideals\Thru.s2p
+def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\CryoRF_SPar_Calibration Standards\Ideals\Thru.s2p
+state_quant: Calibration method
+state_value_1: SOLR
+tooltip: Select s2p file
 
-[Ideal reflect (.s2p file)]
+[Ideal thru]
+datatype: PATH
+group: Ideal standards
+def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\CryoRF_SPar_Calibration Standards\Ideals\Thru.s2p
+state_quant: Calibration method
+state_value_1: SOLT
+state_value_2: TRL
+tooltip: Select s2p file
+
+[Ideal reflect]
 datatype: PATH
 group: Ideal standards
 state_quant: Calibration method
 state_value_1: TRL
-def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\2023\Cal_standards\Ideals\Reflect.s2p
+def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\CryoRF_SPar_Calibration Standards\Ideals\Reflect.s2p
+tooltip: Select s2p file
 
-[Ideal line (.s2p file)]
+[Ideal line]
 datatype: PATH
 group: Ideal standards
 state_quant: Calibration method
 state_value_1: TRL
-def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\2023\Cal_standards\Ideals\Line.s2p
+def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\CryoRF_SPar_Calibration Standards\Ideals\Line.s2p
+tooltip: Select s2p file
+
+
+######################
+# MEASURED STANDARDS #
+######################
+
+[Load last cal]
+label: Automically detect last calibration folder in the specified database
+datatype: BOOLEAN
+group: Measured standards & switch-terms
+def_value: True
+
+[Database for the SNP files]
+datatype: PATH
+group: General settings
+def_value: I:\Drive condivisi\SuperQuElectronics\Measurements\CryoRF_SPar_Calibration Standards\SOLR_Cal_Kit SMA 1
+tooltip: The global folder where all the standards' acquistions are stored
+state_quant: Load last cal
+state_value_1: True
+
+[Measured short]
+datatype: PATH
+group: Measured standards & switch-terms
+state_quant: Calibration method
+state_value_1: SOLR
+state_value_2: SOLT
+tooltip: Select s2p file
+second_state_quant: Load last cal
+second_state_value_1: False
+
+[Measured open]
+datatype: PATH
+group: Measured standards & switch-terms
+state_quant: Calibration method
+state_value_1: SOLR
+state_value_2: SOLT
+tooltip: Select s2p file
+second_state_quant: Load last cal
+second_state_value_1: False
+
+[Measured load]
+datatype: PATH
+group: Measured standards & switch-terms
+state_quant: Calibration method
+state_value_1: SOLR
+state_value_2: SOLT
+tooltip: Select s2p file
+second_state_quant: Load last cal
+second_state_value_1: False
+
+[Measured reciprocal]
+datatype: PATH
+group: Measured standards & switch-terms
+state_quant: Calibration method
+state_value_1: SOLR
+tooltip: Select s2p file
+second_state_quant: Load last cal
+second_state_value_1: False
+
+[Measured thru]
+datatype: PATH
+group: Measured standards & switch-terms
+state_quant: Calibration method
+state_value_1: SOLT
+state_value_2: TRL
+tooltip: Select s2p file
+second_state_quant: Load last cal
+second_state_value_1: False
+
+[Measured reflect]
+datatype: PATH
+group: Measured standards & switch-terms
+state_quant: Calibration method
+state_value_1: TRL
+tooltip: Select s2p file
+second_state_quant: Load last cal
+second_state_value_1: False
+
+[Measured line]
+datatype: PATH
+group: Measured standards & switch-terms
+state_quant: Calibration method
+state_value_1: TRL
+tooltip: Select s2p file
+second_state_quant: Load last cal
+second_state_value_1: False
+
+################
+# MORE OPTIONS #
+################
+
+[Measured a2/b2_1]
+label: Measured forward switch-term
+datatype: PATH
+group: Measured standards & switch-terms
+tooltip: Select s1p file
+state_quant: Load last cal
+state_value_1: False
+
+[Measured a1/b1_2]
+label: Measured reverse switch-term
+datatype: PATH
+group: Measured standards & switch-terms
+tooltip: Select s1p file
+state_quant: Load last cal
+state_value_1: False
+
+[Apply custom fixture removal]
+datatype: BOOLEAN
+group: Fixture removal
+def_value: False
+
+[Fixture on port 1]
+datatype: PATH
+tooltip: Select s2p file
+group: Fixture removal
+state_quant: Apply custom fixture removal
+state_value_1: True
+
+[Fixture on port 2]
+datatype: PATH
+tooltip: Select s2p file
+group: Fixture removal
+state_quant: Apply custom fixture removal
+state_value_1: True
+
+[Apply default fixture removal]
+label: Apply fixture removal based on reciprocal standard
+datatype: BOOLEAN
+group: Fixture removal
+def_value: False
+state_quant: Apply custom fixture removal
+state_value_1: False
+second_state_quant: Calibration method
+second_state_value_1: SOLR
+tooltip: WARNING: This method is a rough approximation based just on the length of the cables, while other contributions (connectors, windings, etc) are neglected
+
+[Length of fixture on port 1]
+unit: Length of reciprocal standard
+datatype: DOUBLE
+low_lim: 0
+high_lim: 1
+def_value: 0.5
+group: Fixture removal
+state_quant: Apply default fixture removal
+state_value_1: True
+
+[Length of fixture on port 2]
+unit: Length of reciprocal standard
+datatype: DOUBLE
+low_lim: 0
+high_lim: 1
+def_value: 0.5
+group: Fixture removal
+state_quant: Apply default fixture removal
+state_value_1: True
+
+
+###########
+# SIGNALS #
+###########
+
+[Frequency range]
+datatype: VECTOR
+x_name: Frequency
+x_unit: Hz
+permission: WRITE
+show_in_measurement_dlg: True
+
+[Raw S11]
+datatype: VECTOR_COMPLEX
+x_name: Frequency
+x_unit: Hz
+show_in_measurement_dlg: True
+group: General settings
+
+[Raw S12]
+datatype: VECTOR_COMPLEX
+x_name: Frequency
+x_unit: Hz
+show_in_measurement_dlg: True
+group: General settings
+
+[Raw S21]
+datatype: VECTOR_COMPLEX
+x_name: Frequency
+x_unit: Hz
+show_in_measurement_dlg: True
+group: General settings
+
+[Raw S22]
+datatype: VECTOR_COMPLEX
+x_name: Frequency
+x_unit: Hz
+show_in_measurement_dlg: True
+group: General settings
+
+[Corrected S11]
+datatype: VECTOR_COMPLEX
+x_name: Frequency
+x_unit: Hz
+permission: READ
+show_in_measurement_dlg: True
+group: General settings
+
+[Corrected S12]
+datatype: VECTOR_COMPLEX
+x_name: Frequency
+x_unit: Hz
+permission: READ
+show_in_measurement_dlg: True
+group: General settings
+
+[Corrected S21]
+datatype: VECTOR_COMPLEX
+x_name: Frequency
+x_unit: Hz
+permission: READ
+show_in_measurement_dlg: True
+group: General settings
+
+[Corrected S22]
+datatype: VECTOR_COMPLEX
+x_name: Frequency
+x_unit: Hz
+permission: READ
+show_in_measurement_dlg: True
+group: General settings
