--- a/SQE_Anritsu_MG3694B/SQE_Anritsu_MG3694B.ini
+++ b/SQE_Anritsu_MG3694B/SQE_Anritsu_MG3694B.ini
@@ -3,36 +3,29 @@
 [General settings]
 
 # The name is shown in all the configuration windows
-name: SQE_RohdeSchwarz_NetworkAnalyzer_with_RTSwitchBox
+name: SQE_Anritsu_MG3694B
 
 # The version string should be updated whenever changes are made to this config file
-version: 1.0
+version: 1.10
 
 # Name of folder containing the code defining a custom driver. Do not define this item
 # or leave it blank for any standard driver based on the built-in VISA interface.
-driver_path: SQE_RohdeSchwarz_NetworkAnalyzer_with_RTSwitchBox
+driver_path:
 
-# default interface and address
 interface: VISA
-address: USB0::0x0AAD::0x01A1::102254::INSTR
-
+address: GPIB1::5::INSTR
 
 [Model and options]
 # The option section allow instruments with different options to use the same driver
 
 # List of models supported by this driver
-model_str_1: ZVA
-model_str_2: ZVB
-model_str_3: ZVT
+model_str_1: MG3694B
 
 # Check instrument model id at startup (True or False). Default is False
-check_model: False
+check_model: True
 
 # Valid model strings returned by the instrument. Default value = model_str
-model_id_1: Rohde&Schwarz,ZVA
-model_id_2: Rohde&Schwarz,ZVB
-model_id_3: Rohde&Schwarz,ZVT
-
+model_id_1: ANRITSU,MG3694B,084508,3.49
 
 # General VISA settings for the instrument.
 [VISA settings]
@@ -42,10 +35,10 @@ model_id_3: Rohde&Schwarz,ZVT
 use_visa = True
 
 # Reset the interface (not the instrument) at startup (True or False).  Default is False
-reset: True
+reset: False
 
 # Time (in seconds) before the timing out while waiting for an instrument response. Default is 5
-timeout: 10
+timeout: 2
 
 # Query instrument errors (True or False).  If True, every command sent to the device will
 # be followed by an error query.  This is useful when testing new setups, but may degrade
@@ -65,15 +58,11 @@ query_instr_errors: False
 error_bit_mask: 255
 
 # SCPI string to be used when querying for instrument error messages
-error_cmd: 
+error_cmd: :SYST:ERR?
 
 # Initialization commands are sent to the instrument when starting the driver
 # *RST will reset the device, *CLS clears the interface
-init: :INIT:CONT ON;:FORM:BORD NORM;
-
-# Boolean string values (used for sending True/False to instrument), default is 1 and 0
-#str_true: ON
-#str_false: OFF
+init: :SYST:LANG "SCPI";
 
 # Final commands sent to the instrument when closing the driver
 final: 
@@ -103,199 +92,40 @@ final:
 #   section:       Name of the section where the control belongs.
 
 
-[RTSwitchBox address]
-datatype: STRING
-def_value: ASRL6::INSTR
-section: SwitchBox settings
-
-[Switch on VNA port 1]
-datatype: COMBO
-combo_def_1: A
-combo_def_2: B
-combo_def_3: C
-combo_def_4: D
-combo_def_5: E
-combo_def_6: F
-combo_def_7: G
-combo_def_8: H
-def_value: A
-section: SwitchBox settings
-
-[Switch on VNA port 2]
-datatype: COMBO
-combo_def_1: A
-combo_def_2: B
-combo_def_3: C
-combo_def_4: D
-combo_def_5: E
-combo_def_6: F
-combo_def_7: G
-combo_def_8: H
-def_value: B
-section: SwitchBox settings
-
-[Network S11]
-x_name: Frequency
-x_unit: Hz
-datatype: VECTOR_COMPLEX
-permission: READ
-group: Signals
-
-[Network S21]
-x_name: Frequency
-x_unit: Hz
-datatype: VECTOR_COMPLEX
-permission: READ
-group: Signals
-
-[Network S12]
-x_name: Frequency
-x_unit: Hz
-datatype: VECTOR_COMPLEX
-permission: READ
-group: Signals
-
-[Network S22]
-x_name: Frequency
-x_unit: Hz
-datatype: VECTOR_COMPLEX
-permission: READ
-group: Signals
-
-[Current S-parameter]
-datatype: COMBO
-combo_def_1: S11
-combo_def_2: S12
-combo_def_3: S21
-combo_def_4: S22
-def_value: S21
-group: Signals
-
-[S11]
-x_name: Frequency
-x_unit: Hz
-datatype: VECTOR_COMPLEX
-permission: READ
-group: Signals
-
-[S21]
-x_name: Frequency
-x_unit: Hz
-datatype: VECTOR_COMPLEX
-permission: READ
-group: Signals
-
-[S12]
-x_name: Frequency
-x_unit: Hz
-datatype: VECTOR_COMPLEX
-permission: READ
-group: Signals
-
-[S22]
-x_name: Frequency
-x_unit: Hz
-datatype: VECTOR_COMPLEX
-permission: READ
-group: Signals
-
-[Output enabled]
-datatype: BOOLEAN
-def_value: False
-set_cmd: :OUTP
-group: Output
-
-[Output power]
+[Frequency]
+unit: Hz
 datatype: DOUBLE
-def_value: -30.0
+def_value: 5.0E9
+set_cmd: :SOUR:FREQ:CW
+
+[Power level]
 unit: dBm
-set_cmd: :SOUR:POW
-group: Output
-
-[IF bandwidth]
 datatype: DOUBLE
-def_value: 10E3
-unit: Hz
-set_cmd: :SENS:BWID
-group: Acquisition
+def_value: -20
+low_lim: -20
+high_lim: 10
+set_cmd: :SOUR:POW:LEV:IMM:AMPL <*>dBm
+tooltip: Negative numbers don't work
 
-[Average]
+# [Automatic levelling control (ALC)]
+# datatype: BOOLEAN
+# def_value: True
+# set_cmd: :POW:ALC
+
+# [Phase]
+# unit: rad
+# datatype: DOUBLE
+# def_value: 0
+# set_cmd: :SOUR:PHAS:ADJ <*>RAD
+# get_cmd: :SOUR:PHAS:ADJ?
+
+[Output]
 datatype: BOOLEAN
 def_value: False
-set_cmd: :SENS:AVER
-group: Acquisition
+set_cmd: :OUTP:STAT
 
-[# of averages]
-datatype: STRING
-def_value: 10
-#low_lim: 1
-#high_lim: 65536
-set_cmd: :SENS:AVER:COUN
-group: Acquisition
-
-[Wait for new trace]
+[Output protection]
 datatype: BOOLEAN
-def_value: True
-group: Acquisition
-
-[Range type]
-datatype: COMBO
-def_value: Start - Stop
-combo_def_1: Center - Span
-combo_def_2: Start - Stop
-permission: NONE
-group: Horizontal
-
-[Start frequency]
-datatype: DOUBLE
-def_value: 4E9
-unit: Hz
-set_cmd: :SENS:FREQ:STAR
-state_quant: Range type
-state_value_1: Start - Stop
-group: Horizontal
-
-[Stop frequency]
-datatype: DOUBLE
-def_value: 12E9
-unit: Hz
-set_cmd: :SENS:FREQ:STOP
-state_quant: Range type
-state_value_1: Start - Stop
-group: Horizontal
-
-[Center frequency]
-datatype: DOUBLE
-def_value: 8E9
-unit: Hz
-set_cmd: :SENS:FREQ:CENT
-state_quant: Range type
-state_value_1: Center - Span
-group: Horizontal
-
-[Span]
-datatype: DOUBLE
-def_value: 8E9
-unit: Hz
-set_cmd: :SENS:FREQ:SPAN
-state_quant: Range type
-state_value_1: Center - Span
-group: Horizontal
-
-[# of points - WARNING! INTEGER ONLY!]
-datatype: STRING
-def_value: 201
-set_cmd: :SENS:SWE:POIN
-group: Horizontal
-
-[Sweep type]
-datatype: COMBO
-def_value: Linear
-combo_def_1: Linear
-combo_def_2: Log
-cmd_def_1: LIN
-cmd_def_2: LOG
-set_cmd: :SENS:SWE:TYPE
-group: Horizontal
-
-
+def_value: False
+set_cmd: :OUTP:PROT
+tooltip: Causes the output to be turned off during frequency changes
