--- a/SQE_Lakeshore_37xAC/SQE_LakeShore_37xAC.ini
+++ b/SQE_Lakeshore_37xAC/SQE_LakeShore_37xAC.ini
@@ -1479,6 +1479,66 @@ cmd_def_2: 2
 group: Upload Temperature Response Curve
 section: Advanced settings
 
+##############
+# TRIGGERING #
+##############
+
+# [Enable trigger 1]
+# datatype: BOOLEAN
+# group: Trigger quantities
+# section: Triggering
+# def_value: False
+
+# [Trigger quantity 1]
+# datatype: DOUBLE
+# group: Trigger quantities
+# section: Triggering
+# tooltip: Create a signal connection with a step parameters that has to trigger a new instrument acquisition 
+# state_quant: Enable trigger 1
+# state_value_1: True
+
+# [Enable trigger 2]
+# datatype: BOOLEAN
+# group: Trigger quantities
+# section: Triggering
+# def_value: False
+
+# [Trigger quantity 2]
+# datatype: DOUBLE
+# group: Trigger quantities
+# section: Triggering
+# tooltip: Create a signal connection with a step parameters that has to trigger a new instrument acquisition 
+# state_quant: Enable trigger 2
+# state_value_1: True
+
+# [Enable trigger 3]
+# datatype: BOOLEAN
+# group: Trigger quantities
+# section: Triggering
+# def_value: False
+
+# [Trigger quantity 3]
+# datatype: DOUBLE
+# group: Trigger quantities
+# section: Triggering
+# tooltip: Create a signal connection with a step parameters that has to trigger a new instrument acquisition 
+# state_quant: Enable trigger 3
+# state_value_1: True
+
+# [Enable trigger 4]
+# datatype: BOOLEAN
+# group: Trigger quantities
+# section: Triggering
+# def_value: False
+
+# [Trigger quantity 4]
+# datatype: DOUBLE
+# group: Trigger quantities
+# section: Triggering
+# tooltip: Create a signal connection with a step parameters that has to trigger a new instrument acquisition 
+# state_quant: Enable trigger 4
+# state_value_1: True
+
 
 ; # Temperature Control (to do)
 
