--- a/SQE_Stanford_SRS_SIM900/SQE_Stanford_SRS_SIM900.ini
+++ b/SQE_Stanford_SRS_SIM900/SQE_Stanford_SRS_SIM900.ini
@@ -3,21 +3,24 @@
 [General settings]
 
 # The name is shown in all the configuration windows
-name: SQE_QSwitchBox
+name: SQE_Stanford_SRS_SIM900 Mainframe
 
 # The version string should be updated whenever changes are made to this config file
-version: 1.0
+version: 0.1
 
 # Name of folder containing the code defining a custom driver. Do not define this item
 # or leave it blank for any standard driver based on the built-in VISA interface.
+driver_path: SQE_Stanford_SRS_SIM900
 
-# default interface and address
-interface: Serial
-address: ASRL4::INSTR
+interface: GPIB
+address: 2
+startup: Do nothing
+
 
 
 [Model and options]
 # The option section allow instruments with different options to use the same driver
+model_id_1: SIM900
 
 # Check instrument model id at startup (True or False). Default is False
 check_model: False
@@ -29,20 +32,16 @@ check_model: False
 # If False, the driver will not perform any operations (unless there is a custom driver).
 use_visa = True
 
-term_char: CR+LF
-baud_rate: 115200
-str_value_out: %.0f
-send_end_on_write: False
-stop_bits: 2
-data_bits: 8
-reset: True # Reset the interface (not the instrument) at startup (True or False).  Default is False
-timeout: 5 # Time (in seconds) before the timing out while waiting for an instrument response. Default is 5
+# Reset the interface (not the instrument) at startup (True or False).  Default is False
+reset: False
 
+# Time (in seconds) before the timing out while waiting for an instrument response. Default is 5
+timeout: 3
 
 # Query instrument errors (True or False).  If True, every command sent to the device will
 # be followed by an error query.  This is useful when testing new setups, but may degrade
 # performance by slowing down the instrument communication. 
-query_instr_errors: False 
+query_instr_errors: False
 
 # Bit mask for checking status byte errors (default is 255, include all errors)
 # The bits signal the following errors:
@@ -57,25 +56,26 @@ query_instr_errors: False
 error_bit_mask: 255
 
 # SCPI string to be used when querying for instrument error messages
-#error_cmd: 
+error_cmd: 
 
 # Initialization commands are sent to the instrument when starting the driver
 # *RST will reset the device, *CLS clears the interface
-#init:
-
-# Boolean string values (used for sending True/False to instrument), default is 1 and 0
-#str_true: ON
-#str_false: OFF
+init: 
 
 # Final commands sent to the instrument when closing the driver
-#final: 
-# Define quantities in sections. This list is a selection of allowed keywords,
-# see the manual for a full list of options
-#   datatype:      The datatype should be one of DOUBLE, BOOLEAN, COMBO,
-#                  STRING, COMPLEX, VECTOR, VECTOR_COMPLEX, PATH or BUTTON.
+final: 
+
+# Serial port baud rate for either the actual device, or the SIM900 mainframe
+baud_rate: 115200
+
+term_char: CR+LF
+
+# Define quantities in sections. The section name should be the same as the "name" value
+# The following keywords are allowed:
+#   name:          Quantity name
 #   unit:          Quantity unit
-#   set_cmd:       Command used to send data to the instrument. Put <*> where the value should appear.
-#   get_cmd:       Command used to get the data from the instrument. Default is set_cmd?
+#   enabled:	   Determines wether the control is enabled from start.  Default is True	
+#   datatype:      The data type should be one of DOUBLE, BOOLEAN, COMBO or STRING
 #   def_value:     Default value
 #   low_lim:       Lowest allowable value.  Defaults to -INF
 #   high_lim:      Highest allowable values.  Defaults to +INF
@@ -83,32 +83,57 @@ error_bit_mask: 255
 #   combo_def_2:   Second option in a pull-down combo box. Only used when datatype=COMBO
 #   ...
 #   combo_def_n:   nth option in a pull-down combo box. Only used when datatype=COMBO
+#   group:         Name of the group where the control belongs.
 #   state_quant:   Quantity that determines this control's visibility
 #   state_value_1: Value of "state_quant" for which the control is visible
 #   state_value_2: Value of "state_quant" for which the control is visible
 #   ...
 #   state_value_n: Value of "state_quant" for which the control is visible
 #   permission:    Sets read/writability, options are BOTH, READ, WRITE or NONE. Default is BOTH 
-#   group:         Name of the group where the control belongs.
-#   section:       Name of the section where the control belongs.
+#   set_cmd:       Command used to send data to the instrument. Put <*> where the value should appear.
+#   sweep_cmd:     Command used to sweep data. Use <sr> for sweep rate, and <*> for the value.
+#   get_cmd:       Command used to get the data from the instrument. Default is set_cmd?
 
+[Slot 1]
+datatype: STRING
+permission: READ
+group: Instruments
 
-[Path]
-datatype: DOUBLE
-high_lim: 6
-low_lim: 0
-def_value: 0
-set_cmd: BOTH <*>
-get_cmd: BOTH?
-tooltip: selecting 0 is equivalent to resetting
+[Slot 2]
+datatype: STRING
+permission: READ
+group: Instruments
 
-[Delay]
-datatype: DOUBLE
-def_value: 20
-unit: ms
-set_cmd: DEL <*>
-get_cmd: DEL?
+[Slot 3]
+datatype: STRING
+permission: READ
+group: Instruments
 
-[Reset]
-datatype: BUTTON
-set_cmd: *RST
+[Slot 4]
+datatype: STRING
+permission: READ
+group: Instruments
+
+[Slot 5]
+datatype: STRING
+permission: READ
+group: Instruments
+
+[Slot 6]
+datatype: STRING
+permission: READ
+group: Instruments
+
+[Slot 7]
+datatype: STRING
+permission: READ
+group: Instruments
+
+[Slot 8]
+datatype: STRING
+permission: READ
+group: Instruments
+
+[Passthrough]
+datatype: STRING
+permission: BOTH
